Fix #29 implementation